--- a/band.css
+++ b/band.css
@@ -341,6 +341,7 @@ a {
 	border-radius: 4px;
 	letter-spacing: .5px;
 	font-family: Roboto, sans-serif;
+	font-size: 14px;
 	font-weight: 400;
 	position: relative;
 	width: 100%;
