--- a/band.css
+++ b/band.css
@@ -288,7 +288,13 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+#chknumbers {
+	    width: 82%;
+    position: absolute;
+}
 #chknumberslabel {
+	    position: relative;
+    width: 100%;
 	display: inline-block;
 }
 
